triangle added to top of color stops. fixes #1

--- a/gradient-editor/gradient-editor.css
+++ b/gradient-editor/gradient-editor.css
@@ -14,6 +14,18 @@
 /* the color inside a color stop */
 .gradient-editor-color {
   border: 1px solid black;
+  border-top: 0;
+}
+.gradient-editor-color::before {
+  border-color: transparent transparent hsla(0,0%, 100%, 0.8) transparent;
+  border-style: solid;
+  border-width: 6px;
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: -12px;
+  left: 1px;
+  content: '';
 }
 
 /* the area the contains the color stops */
